# src/router/index.js
@@ -6,6 +6,7 @@ const booking = require("./booking")
 const tour = require("./tour")
 const auth = require("./auth")
 const article = require("./community/article")
+const admin = require("./admin/article")
 const comment = require("./community/comment")
 const reply = require("./community/reply")
 const dashboard = require("./dashboard")
@@ -20,6 +21,7 @@ router.use("/article", article);
 router.use("/comment", comment);
 router.use("/reply", reply);
 router.use("/community", article); 
+router.use("/admin", admin); 
 router.use("/dashboard", dashboard); 
 
 module.exports = router;
